Fixed checkout problems and finished checkout system
