# src/routes/store.ts
@@ -1,14 +1,14 @@
 import checkout from './checkout.ts';
-import product from './product.ts';
+import products from './products.ts';
 import express from 'express';
-import cart from './cart.ts';
+import carts from './carts.ts';
 import buy from './buy.ts';
 
 const router = express.Router();
 
 router.use('/buy', buy);
-router.use('/cart', cart);
-router.use('/product', product);
+router.use('/carts', carts);
+router.use('/products', products);
 router.use('/checkout', checkout);
 
 export default router;
